--- a/showeq/trunk/ChangeLog
+++ b/showeq/trunk/ChangeLog
@@ -1,3 +1,10 @@
+BlueAdept (12/13/17)
+-------------------
+- Updated version to 5.13.10.59
+- Support EQ patch 12/12/17
+- Updated Opcodes (Newby)
+- Updated Structs (Newby)
+
 BlueAdept (11/23/17)
 -------------------
 - Updated version to 5.13.10.58
