--- a/showeq/trunk/ChangeLog
+++ b/showeq/trunk/ChangeLog
@@ -1,3 +1,12 @@
+BlueAdept (12/23/17)
+-------------------
+- Updated version to 5.13.10.60
+- Support EQ patch 12/19/17
+- Updated Opcodes (Newby)
+- Updated Structs (Newby)
+- Updated zones.h (llaffer)
+- Updated races.h (fransick)
+
 BlueAdept (12/13/17)
 -------------------
 - Updated version to 5.13.10.59
