Historical checkin for 2/22/18 - Updated Opcodes (Newby) - Updated Structs (Newby)
Version to 5.13.10.63

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+BlueAdept (2/22/18)
+-------------------
+- Updated version to 5.13.10.63
+- Support EQ patch 2/21/18
+- Updated Opcodes (Newby)
+- Updated Structs (Newby)
+
 BlueAdept (1/19/18)
 -------------------
 - Updated version to 5.13.10.62
