--- a/showeq/trunk/ChangeLog
+++ b/showeq/trunk/ChangeLog
@@ -1,3 +1,10 @@
+BlueAdept (3/14/18)
+-------------------
+- Updated version to 5.13.10.64
+- Support EQ patch 3/14/18
+- Updated Opcodes (Newby)
+- Updated Structs (Newby)
+
 BlueAdept (2/22/18)
 -------------------
 - Updated version to 5.13.10.63
