Historical checkin for 04/19/18 - Updated Opcodes (Newby) - Updated Structs (Newby)
Version to 5.13.10.65

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+BlueAdept (4/19/18)
+-------------------
+- Updated version to 5.13.10.65
+- Support EQ patch 4/20/18
+- Updated Opcodes (Newby)
+- Updated Structs (Newby)
+
 BlueAdept (3/14/18)
 -------------------
 - Updated version to 5.13.10.64
