Historical checkin for 05/19/18 - Updated Opcodes (Newby) - Updated Structs (Newby)
Version to 5.13.10.66

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+BlueAdept (5/18/18)
+-------------------
+- Updated version to 5.13.10.66
+- Support EQ patch 5/16/18
+- Updated Opcodes (Newby)
+- Updated Structs (Newby)
+
 BlueAdept (4/19/18)
 -------------------
 - Updated version to 5.13.10.65
